--- a/news.html
+++ b/news.html
@@ -43,36 +43,71 @@
     </div>
   </section>
 
+<!DOCTYPE html>
+<html lang="no">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nyheter | BrandRadar</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <!-- HEADER -->
+  <header class="main-header">
+    <div class="header-inner">
+      <div class="logo">BrandRadar</div>
+      <nav class="main-nav">
+        <a href="index.html">Home</a>
+        <a href="news.html" class="active">News</a>
+        <a href="brands.html">Brands</a>
+        <a href="favoritter.html">Favoritter</a>
+      </nav>
+    </div>
+  </header>
+
   <!-- NYHETER -->
-  <section class="news-grid">
-    <h2>Siste nytt på radaren</h2>
-    <div class="grid">
+  <section class="news-section">
+    <h2>Siste nytt 📰</h2>
+    <p class="news-intro">Hold deg oppdatert på nye kolleksjoner, trender og eksklusive kampanjer.</p>
+
+    <div class="news-grid">
       <article class="news-card">
-        <img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=600" alt="Sneakers" />
-        <h3>3 sneakers som definerer 2025</h3>
-        <p>Nike, Adidas og New Balance leder an – men en outsider overrasker!</p>
-        <a href="#">Les mer</a>
+        <img src="https://images.unsplash.com/photo-1556905055-8f358a7a47b2" alt="Nyhet 1" />
+        <div class="news-info">
+          <h3>Nike lanserer ny Air Max-serie</h3>
+          <p>Nikes nye kolleksjon blander retro-design med moderne teknologi – perfekt for høsten 2025.</p>
+          <a href="#" class="read-more">Les mer</a>
+        </div>
       </article>
+
       <article class="news-card">
-        <img src="https://images.unsplash.com/photo-1603808033192-082d6919d184?w=600" alt="Bærekraft" />
-        <h3>Bærekraft møter design</h3>
-        <p>Hvordan Patagonia og Ganni beviser at ansvarlig mote kan være trendsettende.</p>
-        <a href="#">Les mer</a>
+        <img src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f" alt="Nyhet 2" />
+        <div class="news-info">
+          <h3>Adidas satser bærekraftig 🌿</h3>
+          <p>Adidas lanserer sko laget av 100% resirkulerte materialer. Sjekk hele linjen her!</p>
+          <a href="#" class="read-more">Les mer</a>
+        </div>
       </article>
+
       <article class="news-card">
-        <img src="https://images.unsplash.com/photo-1600180758890-6b94519a8ba6?w=600" alt="Jakker" />
-        <h3>Guide: Jakker til overgangssesongen</h3>
-        <p>Fem lette alternativer som kombinerer stil, funksjon og komfort.</p>
-        <a href="#">Les mer</a>
-      </article>
-      <article class="news-card">
-        <img src="https://images.unsplash.com/photo-1614286311444-fb5c8a96b944?w=600" alt="Gatemote" />
-        <h3>Streetstyle fra Milano til Oslo</h3>
-        <p>Europeisk influenserstil gjør comeback — med fokus på sneakers og denim.</p>
-        <a href="#">Les mer</a>
+        <img src="https://images.unsplash.com/photo-1521334884684-d80222895322" alt="Nyhet 3" />
+        <div class="news-info">
+          <h3>H&M x North Face – uventet samarbeid</h3>
+          <p>To verdener møtes i et eksklusivt samarbeid som tar moteverdenen med storm.</p>
+          <a href="#" class="read-more">Les mer</a>
+        </div>
       </article>
     </div>
   </section>
+
+  <!-- PARTNER BANNER (kommer her etterpå) -->
+
+  <footer>
+    <p>© 2025 BrandRadar. All rights reserved.</p>
+  </footer>
+</body>
+</html>
+
 
   <!-- DEALS -->
   <section class="weekly-deals">
