--- a/news.html
+++ b/news.html
@@ -109,24 +109,31 @@
 </html>
 
 
-  <!-- DEALS -->
-  <section class="weekly-deals">
-    <h2>Ukens Deals 💸</h2>
-    <div class="deal-list">
-      <div class="deal-item">
-        <h4>🔥 25% på Nike hos Zalando</h4>
-        <a href="#">Se tilbud</a>
-      </div>
-      <div class="deal-item">
-        <h4>Fri frakt + 15% ekstra hos Boozt</h4>
-        <a href="#">Shop nå</a>
-      </div>
-      <div class="deal-item">
-        <h4>Outlet: Adidas opptil 60% rabatt</h4>
-        <a href="#">Utforsk</a>
-      </div>
-    </div>
-  </section>
+ <!-- UKENS DEALS -->
+<section class="weekly-deals">
+  <h2>Ukens Deals 💸</h2>
+  <p class="deals-intro">Hent de beste tilbudene fra våre partnere — oppdatert daglig.</p>
+
+  <div class="deals-grid">
+    <article class="deal-card">
+      <h3>🔥 25% på Nike hos Zalando</h3>
+      <p>Gjelder ut uka – rabatten aktiveres automatisk i kassen.</p>
+      <a href="#" class="deal-btn">Se tilbud</a>
+    </article>
+
+    <article class="deal-card">
+      <h3>💥 Boozt: Fri frakt + 15% ekstra rabatt</h3>
+      <p>Gjelder på utvalgte merker i høstkolleksjonen.</p>
+      <a href="#" class="deal-btn">Shop nå</a>
+    </article>
+
+    <article class="deal-card">
+      <h3>👟 Adidas Outlet opptil 60% rabatt</h3>
+      <p>Oppgrader garderoben – prisene gjelder så langt lageret rekker.</p>
+      <a href="#" class="deal-btn">Utforsk</a>
+    </article>
+  </div>
+</section>
 
   <!-- RADAR PICKS -->
   <section class="radar-picks">
