--- a/news.html
+++ b/news.html
@@ -6,6 +6,7 @@
   <title>BrandRadar News</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <!-- HEADER -->
   <header class="main-header">
@@ -20,18 +21,17 @@
     </div>
   </header>
 
-  <!-- BRANDRADAR PARTNER BANNER -->
-<section class="partner-banner">
-  <div class="partner-inner">
-    <img src="https://images.unsplash.com/photo-1606813902788-8d84f9488c12?w=400" alt="Partner-logo" />
-    <div class="partner-text">
-      <h3>Ukens Partner 💎</h3>
-      <p><strong>Boozt</strong> – 15% ekstra rabatt på høstkolleksjonen! Kun frem til søndag.</p>
-      <a href="#" class="partner-btn">Shop kampanjen</a>
+  <!-- PARTNER BANNER -->
+  <section class="partner-banner">
+    <div class="partner-inner">
+      <img src="https://images.unsplash.com/photo-1606813902788-8d84f9488c12?w=400" alt="Partner-logo" />
+      <div class="partner-text">
+        <h3>Ukens Partner 💎</h3>
+        <p><strong>Boozt</strong> – 15% ekstra rabatt på høstkolleksjonen! Kun frem til søndag.</p>
+        <a href="#" class="partner-btn">Shop kampanjen</a>
+      </div>
     </div>
-  </div>
-</section>
-
+  </section>
 
   <!-- HERO -->
   <section class="news-hero">
@@ -42,28 +42,6 @@
       <a href="#" class="cta-btn">Se tilbudene</a>
     </div>
   </section>
-
-<!DOCTYPE html>
-<html lang="no">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nyheter | BrandRadar</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <!-- HEADER -->
-  <header class="main-header">
-    <div class="header-inner">
-      <div class="logo">BrandRadar</div>
-      <nav class="main-nav">
-        <a href="index.html">Home</a>
-        <a href="news.html" class="active">News</a>
-        <a href="brands.html">Brands</a>
-        <a href="favoritter.html">Favoritter</a>
-      </nav>
-    </div>
-  </header>
 
   <!-- NYHETER -->
   <section class="news-section">
@@ -100,40 +78,31 @@
     </div>
   </section>
 
-  <!-- PARTNER BANNER (kommer her etterpå) -->
+  <!-- UKENS DEALS -->
+  <section class="weekly-deals">
+    <h2>Ukens Deals 💸</h2>
+    <p class="deals-intro">Hent de beste tilbudene fra våre partnere — oppdatert daglig.</p>
 
-  <footer>
-    <p>© 2025 BrandRadar. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+    <div class="deals-grid">
+      <article class="deal-card">
+        <h3>🔥 25% på Nike hos Zalando</h3>
+        <p>Gjelder ut uka – rabatten aktiveres automatisk i kassen.</p>
+        <a href="#" class="deal-btn">Se tilbud</a>
+      </article>
 
+      <article class="deal-card">
+        <h3>💥 Boozt: Fri frakt + 15% ekstra rabatt</h3>
+        <p>Gjelder på utvalgte merker i høstkolleksjonen.</p>
+        <a href="#" class="deal-btn">Shop nå</a>
+      </article>
 
- <!-- UKENS DEALS -->
-<section class="weekly-deals">
-  <h2>Ukens Deals 💸</h2>
-  <p class="deals-intro">Hent de beste tilbudene fra våre partnere — oppdatert daglig.</p>
-
-  <div class="deals-grid">
-    <article class="deal-card">
-      <h3>🔥 25% på Nike hos Zalando</h3>
-      <p>Gjelder ut uka – rabatten aktiveres automatisk i kassen.</p>
-      <a href="#" class="deal-btn">Se tilbud</a>
-    </article>
-
-    <article class="deal-card">
-      <h3>💥 Boozt: Fri frakt + 15% ekstra rabatt</h3>
-      <p>Gjelder på utvalgte merker i høstkolleksjonen.</p>
-      <a href="#" class="deal-btn">Shop nå</a>
-    </article>
-
-    <article class="deal-card">
-      <h3>👟 Adidas Outlet opptil 60% rabatt</h3>
-      <p>Oppgrader garderoben – prisene gjelder så langt lageret rekker.</p>
-      <a href="#" class="deal-btn">Utforsk</a>
-    </article>
-  </div>
-</section>
+      <article class="deal-card">
+        <h3>👟 Adidas Outlet opptil 60% rabatt</h3>
+        <p>Oppgrader garderoben – prisene gjelder så langt lageret rekker.</p>
+        <a href="#" class="deal-btn">Utforsk</a>
+      </article>
+    </div>
+  </section>
 
   <!-- RADAR PICKS -->
   <section class="radar-picks">
