--- a/news.html
+++ b/news.html
@@ -133,7 +133,7 @@
 
   <!-- BRAND SPOTLIGHT -->
   <section class="brand-spotlight">
-    <h2>Ugens Brand 👕</h2>
+    <h2>Ukens Brand 👕</h2>
     <div class="brand-feature">
       <img src="https://images.unsplash.com/photo-1539185441755-769473a23570?w=800" alt="ASICS" />
       <div class="brand-info">
