--- a/news.html
+++ b/news.html
@@ -13,12 +13,12 @@
     <div class="header-inner">
       <div class="logo">BrandRadar</div>
       <nav class="main-nav">
-        <a href="index.html">Home</a>
-        <a href="news.html" class="active">News</a>
-        <a href="brands.html">Brands</a>
-        <a href="favoritter.html">Favoritter</a>
-      </nav>
-    </div>
+  <a href="index.html">Home</a>
+  <a href="news.html" class="active">News</a>
+  <a href="brands.html">Brands</a>
+  <a href="favoritter.html">Favoritter (<span id="favorite-count">0</span>)</a>
+</nav>
+  </div>
   </header>
 
   <!-- PARTNER BANNER -->
