--- a/news.html
+++ b/news.html
@@ -148,6 +148,9 @@
   <footer class="footer">
     <p>© 2025 BrandRadar – Oppdag trender før alle andre.</p>
   </footer>
+  
+  <script src="script-favorites.js"></script>
+
 </body>
 </html>
 
