--- a/news.html
+++ b/news.html
@@ -32,6 +32,19 @@
       </div>
     </div>
   </section>
+  
+<!-- 🗞️ NYHETSSEKSJON  -->
+  <section class="news-section">
+  <h1>Nyheter og trender</h1>
+
+  <div id="featured-news" class="featured-wrapper"></div>
+
+  <h2>Flere artikler</h2>
+  <div id="news-grid" class="news-grid"></div>
+</section>
+
+<script src="news.js"></script>
+
 
   <!-- HERO -->
   <section class="news-hero">
