--- a/news.html
+++ b/news.html
@@ -32,6 +32,12 @@
       </div>
     </div>
   </section>
+
+  <!-- ================================
+     UKENS DEALS
+     ================================ -->
+<section id="deals-section" class="deals-section"></section>
+
   
 <!-- 🗞️ NYHETSSEKSJON  -->
   <section class="news-section">
