--- a/news.html
+++ b/news.html
@@ -38,8 +38,13 @@
      ================================ -->
 <section id="deals-section" class="deals-section"></section>
 
-  
-<!-- 🗞️ NYHETSSEKSJON  -->
+  <!-- ================================
+     RADAR PICKS
+     ================================ -->
+<section id="picks-section" class="picks-section"></section>
+
+
+  <!-- 🗞️ NYHETSSEKSJON  -->
   <section class="news-section">
   <h1>Nyheter og trender</h1>
 
