--- a/news.html
+++ b/news.html
@@ -175,6 +175,11 @@
   </footer>
   
   <script src="script-favorites.js"></script>
+  <script src="partnerBanner.js"></script>
+<script src="deals.js"></script>
+<script src="picks.js"></script>
+<script src="news.js"></script>
+
 
 </body>
 </html>
