--- a/index.html
+++ b/index.html
@@ -7,137 +7,166 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
- <!-- HEADER -->
-<header class="main-header">
-  <div class="header-inner">
-    <div class="logo">BrandRadar</div>
 
-    <div class="search-box">
-      <input type="text" placeholder="Søk produkter eller merker..." />
-      <button>🔍</button>
-    </div>
+  <!-- =====================================
+       HEADER
+       ===================================== -->
+  <header class="main-header">
+    <div class="header-inner">
+      <div class="logo">BrandRadar</div>
 
-    <nav class="main-nav">
-      <a href="index.html">Home</a>
-      <a href="news.html">News</a>
-      <a href="brands.html">Brands</a>
-      <a href="favoritter.html">Favoritter</a>
-    </nav>
-  </div>
-</header>
+      <div class="search-box">
+        <input type="text" placeholder="Søk produkter eller merker..." />
+        <button>🔍</button>
+      </div>
 
- <!-- NAV WRAP (ny container) -->
-<div class="nav-wrap">
-  
-  <!-- CATEGORY BAR -->
-  <div class="nav-categories">
-    <ul class="nav-links">
-      <li class="nav-item" data-target="clothing">Clothing</li>
-      <li class="nav-item" data-target="shoes">Shoes</li>
-      <li class="nav-item" data-target="supplements">Supplements</li>
-    </ul>
-  </div>
-
-<!-- MEGA MENU -->
-<div class="mega-menu" id="mega-menu">
-  <!-- CLOTHING -->
-  <div class="mega-content" id="clothing">
-    <div class="column">
-      <h4>Men</h4>
-      <a href="#">Sweaters & Hoodies</a>
-      <a href="#">T-shirts</a>
-      <a href="#">Pants</a>
-      <a href="#">Jeans</a>
-      <a href="#">Jackets</a>
-      <a href="#">Gymwear</a>
+      <nav class="main-nav">
+        <a href="index.html" class="active">Home</a>
+        <a href="news.html">News</a>
+        <a href="brands.html">Brands</a>
+        <a href="favoritter.html">Favoritter</a>
+      </nav>
     </div>
-    <div class="column">
-      <h4>Women</h4>
-      <a href="#">Sweaters & Hoodies</a>
-      <a href="#">T-shirts</a>
-      <a href="#">Jackets</a>
-      <a href="#">Dresses</a>
-      <a href="#">Cardigans</a>
-      <a href="#">Gymwear</a>
-    </div>
-    <div class="column">
-      <h4>Children</h4>
-      <a href="#">T-shirts</a>
-      <a href="#">Pants</a>
-      <a href="#">Sneakers</a>
-    </div>
-  </div>
-
-  <!-- SHOES -->
-  <div class="mega-content" id="shoes">
-    <div class="column">
-      <h4>Men</h4>
-      <a href="#">Sneakers</a>
-      <a href="#">Boots</a>
-      <a href="#">Sports</a>
-    </div>
-    <div class="column">
-      <h4>Women</h4>
-      <a href="#">Sneakers</a>
-      <a href="#">Boots</a>
-      <a href="#">Heels</a>
-    </div>
-    <div class="column">
-      <h4>Children</h4>
-      <a href="#">Sneakers</a>
-      <a href="#">Sandals</a>
-    </div>
-  </div>
-
-  <!-- SUPPLEMENTS -->
-  <div class="mega-content" id="supplements">
-    <div class="column">
-      <h4>Equipment</h4>
-      <a href="#">Electronics</a>
-      <a href="#">Sports</a>
-      <a href="#">Bags</a>
-      <a href="#">Home Workouts</a>
-    </div>
-    <div class="column">
-      <h4>Supplements</h4>
-      <a href="#">Proteinpowder</a>
-      <a href="#">Creatine</a>
-      <a href="#">PWO</a>
-      <a href="#">Vitamins</a>
-    </div>
-  </div>
-</div>
-</div>
+  </header>
 
 
-<!-- FEATURED PRODUCTS SECTION -->
-<section class="featured-products">
-  <h2>Utvalgte produkter</h2>
-  <div class="product-grid">
-    <!-- Produkter lastes automatisk fra Google Sheets -->
-  </div>
-</section>
+  <!-- =====================================
+       NAVIGASJON + MEGA-MENY
+       ===================================== -->
+  <div class="nav-wrap">
 
-<script src="script-index.js"></script>
-<script src="script.js"></script>
-<script src="script-favorites.js"></script>
+    <!-- CATEGORY BAR -->
+    <div class="nav-categories">
+      <ul class="nav-links">
+        <li class="nav-item" data-target="clothing">Clothing</li>
+        <li class="nav-item" data-target="shoes">Shoes</li>
+        <li class="nav-item" data-target="supplements">Supplements</li>
+      </ul>
+    </div>
+
+    <!-- ================================
+         MEGA MENU – FULLVERSJON
+         ================================ -->
+    <div class="mega-menu" id="mega-menu">
+
+      <!-- CLOTHING -->
+      <div class="mega-content" id="clothing">
+        <!-- MEN -->
+        <div class="column">
+          <h4>Men</h4>
+          <a href="category.html?category=clothing&gender=men&subcategory=sweaters">Sweaters & Hoodies</a>
+          <a href="category.html?category=clothing&gender=men&subcategory=tshirts">T-shirts</a>
+          <a href="category.html?category=clothing&gender=men&subcategory=pants">Pants</a>
+          <a href="category.html?category=clothing&gender=men&subcategory=jeans">Jeans</a>
+          <a href="category.html?category=clothing&gender=men&subcategory=shorts">Shorts</a>
+          <a href="category.html?category=clothing&gender=men&subcategory=jackets">Jackets</a>
+          <a href="category.html?category=clothing&gender=men&subcategory=gymwear">Gymwear</a>
+        </div>
+
+        <!-- WOMEN -->
+        <div class="column">
+          <h4>Women</h4>
+          <a href="category.html?category=clothing&gender=women&subcategory=sweaters">Sweaters & Hoodies</a>
+          <a href="category.html?category=clothing&gender=women&subcategory=tshirts">T-shirts</a>
+          <a href="category.html?category=clothing&gender=women&subcategory=jackets">Jackets</a>
+          <a href="category.html?category=clothing&gender=women&subcategory=dresses">Dresses</a>
+          <a href="category.html?category=clothing&gender=women&subcategory=cardigans">Cardigans</a>
+          <a href="category.html?category=clothing&gender=women&subcategory=pants">Pants</a>
+          <a href="category.html?category=clothing&gender=women&subcategory=jeans">Jeans</a>
+          <a href="category.html?category=clothing&gender=women&subcategory=shorts">Shorts</a>
+          <a href="category.html?category=clothing&gender=women&subcategory=gymwear">Gymwear</a>
+          <a href="category.html?category=clothing&gender=women&subcategory=accessories">Accessories / Beauty</a>
+        </div>
+
+        <!-- CHILDREN -->
+        <div class="column">
+          <h4>Children</h4>
+          <a href="category.html?category=clothing&gender=children&subcategory=tshirts">T-shirts</a>
+          <a href="category.html?category=clothing&gender=children&subcategory=pants">Pants</a>
+          <a href="category.html?category=clothing&gender=children&subcategory=sneakers">Sneakers</a>
+        </div>
+      </div>
+
+
+      <!-- SHOES -->
+      <div class="mega-content" id="shoes">
+        <!-- MEN -->
+        <div class="column">
+          <h4>Men</h4>
+          <a href="category.html?category=shoes&gender=men&subcategory=sneakers">Sneakers</a>
+          <a href="category.html?category=shoes&gender=men&subcategory=boots">Boots</a>
+          <a href="category.html?category=shoes&gender=men&subcategory=sports">Sports</a>
+          <a href="category.html?category=shoes&gender=men&subcategory=casual">Casual</a>
+          <a href="category.html?category=shoes&gender=men&subcategory=business">Business</a>
+        </div>
+
+        <!-- WOMEN -->
+        <div class="column">
+          <h4>Women</h4>
+          <a href="category.html?category=shoes&gender=women&subcategory=sneakers">Sneakers</a>
+          <a href="category.html?category=shoes&gender=women&subcategory=boots">Boots</a>
+          <a href="category.html?category=shoes&gender=women&subcategory=heels">Heels</a>
+          <a href="category.html?category=shoes&gender=women&subcategory=casual">Casual</a>
+          <a href="category.html?category=shoes&gender=women&subcategory=sports">Sports</a>
+        </div>
+
+        <!-- CHILDREN -->
+        <div class="column">
+          <h4>Children</h4>
+          <a href="category.html?category=shoes&gender=children&subcategory=sneakers">Sneakers</a>
+          <a href="category.html?category=shoes&gender=children&subcategory=boots">Boots</a>
+          <a href="category.html?category=shoes&gender=children&subcategory=sandals">Sandals</a>
+          <a href="category.html?category=shoes&gender=children&subcategory=sports">Sports</a>
+        </div>
+      </div>
+
+
+      <!-- SUPPLEMENTS -->
+      <div class="mega-content" id="supplements">
+        <!-- EQUIPMENT -->
+        <div class="column">
+          <h4>Equipment</h4>
+          <a href="category.html?category=supplements&type=equipment&subcategory=electronics">Electronics</a>
+          <a href="category.html?category=supplements&type=equipment&subcategory=sports">Sports</a>
+          <a href="category.html?category=supplements&type=equipment&subcategory=gym">Gym</a>
+          <a href="category.html?category=supplements&type=equipment&subcategory=bags">Bags</a>
+          <a href="category.html?category=supplements&type=equipment&subcategory=home-workout">Home-Workout</a>
+        </div>
+
+        <!-- SUPPLEMENTS -->
+        <div class="column">
+          <h4>Supplements</h4>
+          <a href="category.html?category=supplements&type=supplements&subcategory=proteinpowder">Proteinpowder</a>
+          <a href="category.html?category=supplements&type=supplements&subcategory=creatine">Creatine</a>
+          <a href="category.html?category=supplements&type=supplements&subcategory=pwo">PWO</a>
+          <a href="category.html?category=supplements&type=supplements&subcategory=vitamins">Vitamins / Minerals</a>
+        </div>
+      </div>
+
+    </div> <!-- END MEGA MENU -->
+  </div> <!-- END NAV WRAP -->
+
+
+  <!-- =====================================
+       FEATURED PRODUCTS
+       ===================================== -->
+  <section class="featured-products">
+    <h2>Utvalgte produkter</h2>
+    <div class="product-grid">
+      <!-- Produkter lastes automatisk fra Google Sheets -->
+    </div>
+  </section>
+
+
+  <!-- =====================================
+       SCRIPTS
+       ===================================== -->
+  <script src="script-index.js"></script>
+  <script src="script.js"></script>
+  <script src="script-favorites.js"></script>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
