--- a/index.html
+++ b/index.html
@@ -44,106 +44,96 @@
       </ul>
     </div>
 
-    <!-- ================================
-         MEGA MENU – FULLVERSJON
-         ================================ -->
-    <div class="mega-menu" id="mega-menu">
+   <!-- ================================
+     MEGA MENU – FULLY LINKED VERSION
+     ================================ -->
+<div class="mega-menu" id="mega-menu">
 
-      <!-- CLOTHING -->
-      <div class="mega-content" id="clothing">
-        <!-- MEN -->
-        <div class="column">
-          <h4>Men</h4>
-          <a href="category.html?category=clothing&gender=men&subcategory=sweaters">Sweaters & Hoodies</a>
-          <a href="category.html?category=clothing&gender=men&subcategory=tshirts">T-shirts</a>
-          <a href="category.html?category=clothing&gender=men&subcategory=pants">Pants</a>
-          <a href="category.html?category=clothing&gender=men&subcategory=jeans">Jeans</a>
-          <a href="category.html?category=clothing&gender=men&subcategory=shorts">Shorts</a>
-          <a href="category.html?category=clothing&gender=men&subcategory=jackets">Jackets</a>
-          <a href="category.html?category=clothing&gender=men&subcategory=gymwear">Gymwear</a>
-        </div>
+  <!-- CLOTHING -->
+  <div class="mega-content" id="clothing">
+    <div class="column">
+      <h4>Men</h4>
+      <a href="category.html?category=clothing&gender=men&subcategory=sweaters-hoodies">Sweaters & Hoodies</a>
+      <a href="category.html?category=clothing&gender=men&subcategory=t-shirts">T-shirts</a>
+      <a href="category.html?category=clothing&gender=men&subcategory=pants">Pants</a>
+      <a href="category.html?category=clothing&gender=men&subcategory=jeans">Jeans</a>
+      <a href="category.html?category=clothing&gender=men&subcategory=shorts">Shorts</a>
+      <a href="category.html?category=clothing&gender=men&subcategory=jackets">Jackets</a>
+      <a href="category.html?category=clothing&gender=men&subcategory=gymwear">Gymwear</a>
+    </div>
 
-        <!-- WOMEN -->
-        <div class="column">
-          <h4>Women</h4>
-          <a href="category.html?category=clothing&gender=women&subcategory=sweaters">Sweaters & Hoodies</a>
-          <a href="category.html?category=clothing&gender=women&subcategory=tshirts">T-shirts</a>
-          <a href="category.html?category=clothing&gender=women&subcategory=jackets">Jackets</a>
-          <a href="category.html?category=clothing&gender=women&subcategory=dresses">Dresses</a>
-          <a href="category.html?category=clothing&gender=women&subcategory=cardigans">Cardigans</a>
-          <a href="category.html?category=clothing&gender=women&subcategory=pants">Pants</a>
-          <a href="category.html?category=clothing&gender=women&subcategory=jeans">Jeans</a>
-          <a href="category.html?category=clothing&gender=women&subcategory=shorts">Shorts</a>
-          <a href="category.html?category=clothing&gender=women&subcategory=gymwear">Gymwear</a>
-          <a href="category.html?category=clothing&gender=women&subcategory=accessories">Accessories / Beauty</a>
-        </div>
+    <div class="column">
+      <h4>Women</h4>
+      <a href="category.html?category=clothing&gender=women&subcategory=sweaters-hoodies">Sweaters & Hoodies</a>
+      <a href="category.html?category=clothing&gender=women&subcategory=t-shirts">T-shirts</a>
+      <a href="category.html?category=clothing&gender=women&subcategory=jackets">Jackets</a>
+      <a href="category.html?category=clothing&gender=women&subcategory=dresses">Dresses</a>
+      <a href="category.html?category=clothing&gender=women&subcategory=cardigans">Cardigans</a>
+      <a href="category.html?category=clothing&gender=women&subcategory=pants">Pants</a>
+      <a href="category.html?category=clothing&gender=women&subcategory=jeans">Jeans</a>
+      <a href="category.html?category=clothing&gender=women&subcategory=shorts">Shorts</a>
+      <a href="category.html?category=clothing&gender=women&subcategory=gymwear">Gymwear</a>
+      <a href="category.html?category=clothing&gender=women&subcategory=accessories-beauty">Accessories / Beauty</a>
+    </div>
 
-        <!-- CHILDREN -->
-        <div class="column">
-          <h4>Children</h4>
-          <a href="category.html?category=clothing&gender=children&subcategory=tshirts">T-shirts</a>
-          <a href="category.html?category=clothing&gender=children&subcategory=pants">Pants</a>
-          <a href="category.html?category=clothing&gender=children&subcategory=sneakers">Sneakers</a>
-        </div>
-      </div>
+    <div class="column">
+      <h4>Children</h4>
+      <a href="category.html?category=clothing&gender=children&subcategory=t-shirts">T-shirts</a>
+      <a href="category.html?category=clothing&gender=children&subcategory=pants">Pants</a>
+      <a href="category.html?category=clothing&gender=children&subcategory=sneakers">Sneakers</a>
+    </div>
+  </div>
 
+  <!-- SHOES -->
+  <div class="mega-content" id="shoes">
+    <div class="column">
+      <h4>Men</h4>
+      <a href="category.html?category=shoes&gender=men&subcategory=sneakers">Sneakers</a>
+      <a href="category.html?category=shoes&gender=men&subcategory=boots">Boots</a>
+      <a href="category.html?category=shoes&gender=men&subcategory=sports">Sports</a>
+      <a href="category.html?category=shoes&gender=men&subcategory=casual">Casual</a>
+      <a href="category.html?category=shoes&gender=men&subcategory=business">Business</a>
+    </div>
 
-      <!-- SHOES -->
-      <div class="mega-content" id="shoes">
-        <!-- MEN -->
-        <div class="column">
-          <h4>Men</h4>
-          <a href="category.html?category=shoes&gender=men&subcategory=sneakers">Sneakers</a>
-          <a href="category.html?category=shoes&gender=men&subcategory=boots">Boots</a>
-          <a href="category.html?category=shoes&gender=men&subcategory=sports">Sports</a>
-          <a href="category.html?category=shoes&gender=men&subcategory=casual">Casual</a>
-          <a href="category.html?category=shoes&gender=men&subcategory=business">Business</a>
-        </div>
+    <div class="column">
+      <h4>Women</h4>
+      <a href="category.html?category=shoes&gender=women&subcategory=sneakers">Sneakers</a>
+      <a href="category.html?category=shoes&gender=women&subcategory=boots">Boots</a>
+      <a href="category.html?category=shoes&gender=women&subcategory=heels">Heels</a>
+      <a href="category.html?category=shoes&gender=women&subcategory=casual">Casual</a>
+      <a href="category.html?category=shoes&gender=women&subcategory=sports">Sports</a>
+    </div>
 
-        <!-- WOMEN -->
-        <div class="column">
-          <h4>Women</h4>
-          <a href="category.html?category=shoes&gender=women&subcategory=sneakers">Sneakers</a>
-          <a href="category.html?category=shoes&gender=women&subcategory=boots">Boots</a>
-          <a href="category.html?category=shoes&gender=women&subcategory=heels">Heels</a>
-          <a href="category.html?category=shoes&gender=women&subcategory=casual">Casual</a>
-          <a href="category.html?category=shoes&gender=women&subcategory=sports">Sports</a>
-        </div>
+    <div class="column">
+      <h4>Children</h4>
+      <a href="category.html?category=shoes&gender=children&subcategory=sneakers">Sneakers</a>
+      <a href="category.html?category=shoes&gender=children&subcategory=boots">Boots</a>
+      <a href="category.html?category=shoes&gender=children&subcategory=sandals">Sandals</a>
+      <a href="category.html?category=shoes&gender=children&subcategory=sports">Sports</a>
+    </div>
+  </div>
 
-        <!-- CHILDREN -->
-        <div class="column">
-          <h4>Children</h4>
-          <a href="category.html?category=shoes&gender=children&subcategory=sneakers">Sneakers</a>
-          <a href="category.html?category=shoes&gender=children&subcategory=boots">Boots</a>
-          <a href="category.html?category=shoes&gender=children&subcategory=sandals">Sandals</a>
-          <a href="category.html?category=shoes&gender=children&subcategory=sports">Sports</a>
-        </div>
-      </div>
+  <!-- SUPPLEMENTS -->
+  <div class="mega-content" id="supplements">
+    <div class="column">
+      <h4>Equipment</h4>
+      <a href="category.html?category=supplements&subcategory=electronics">Electronics</a>
+      <a href="category.html?category=supplements&subcategory=sports">Sports</a>
+      <a href="category.html?category=supplements&subcategory=gym">Gym</a>
+      <a href="category.html?category=supplements&subcategory=bags">Bags</a>
+      <a href="category.html?category=supplements&subcategory=home-workout">Home-Workout</a>
+    </div>
 
+    <div class="column">
+      <h4>Supplements</h4>
+      <a href="category.html?category=supplements&subcategory=proteinpowder">Proteinpowder</a>
+      <a href="category.html?category=supplements&subcategory=creatine">Creatine</a>
+      <a href="category.html?category=supplements&subcategory=pwo">PWO</a>
+      <a href="category.html?category=supplements&subcategory=vitamins-minerals">Vitamins / Minerals</a>
+    </div>
+  </div>
+</div>
 
-      <!-- SUPPLEMENTS -->
-      <div class="mega-content" id="supplements">
-        <!-- EQUIPMENT -->
-        <div class="column">
-          <h4>Equipment</h4>
-          <a href="category.html?category=supplements&type=equipment&subcategory=electronics">Electronics</a>
-          <a href="category.html?category=supplements&type=equipment&subcategory=sports">Sports</a>
-          <a href="category.html?category=supplements&type=equipment&subcategory=gym">Gym</a>
-          <a href="category.html?category=supplements&type=equipment&subcategory=bags">Bags</a>
-          <a href="category.html?category=supplements&type=equipment&subcategory=home-workout">Home-Workout</a>
-        </div>
-
-        <!-- SUPPLEMENTS -->
-        <div class="column">
-          <h4>Supplements</h4>
-          <a href="category.html?category=supplements&type=supplements&subcategory=proteinpowder">Proteinpowder</a>
-          <a href="category.html?category=supplements&type=supplements&subcategory=creatine">Creatine</a>
-          <a href="category.html?category=supplements&type=supplements&subcategory=pwo">PWO</a>
-          <a href="category.html?category=supplements&type=supplements&subcategory=vitamins">Vitamins / Minerals</a>
-        </div>
-      </div>
-
-    </div> <!-- END MEGA MENU -->
   </div> <!-- END NAV WRAP -->
 
 
@@ -167,6 +157,7 @@
 
 </body>
 </html>
+
 
 
 
