--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
       <a href="category.html?category=supplements&subcategory=creatine">Creatine</a>
       <a href="category.html?category=supplements&subcategory=pwo">PWO</a>
       <a href="category.html?category=supplements&subcategory=vitamins-minerals">Vitamins / Minerals</a>
+      <a href="category.html?category=supplements&subcategory=proteinbars">Proteinbars</a>
     </div>
   </div>
 </div>
@@ -157,6 +158,7 @@
 
 </body>
 </html>
+
 
 
 
