--- a/product.html
+++ b/product.html
@@ -33,10 +33,13 @@
 
  <section class="product-detail">
   <div class="product-container">
-    <div class="image-gallery">
-      <img id="main-image" src="" alt="Produktbilde" />
-      <div class="thumbnails" id="thumbnails"></div>
-    </div>
+    <div class="product-images">
+  <div class="main-image">
+    <img id="main-image" src="" alt="Produktbilde">
+  </div>
+  <div class="thumbnail-container" id="thumbnails"></div>
+</div>
+
 
     <div class="info">
       <button id="back-btn">← Tilbake</button>
